# Final_TECMP_

./: CMakeLists.txt  README.md  conanfile.txt
include/: BTSInterface.h  BTSRevoDevice.h  BTSRevoGUI.h  CANCaptureModuleDevice.h  CaptureModuleDevice.h  CaptureModuleInterface.h  DeviceFactory.h  FunctionLibrary.h  GUI.h  GenericScriptBackend.h  GenericScriptGUI.h  LINCaptureModuleDevice.h  Logging.h  Themes.h  legacygui.h  te_device_interface.h
